fix: resolve 4 important issues from audit
- Fix A: hide Swagger UI in production (NODE_ENV=production)
  Swagger is now only mounted in development; swaggerOptions moved inside the guard
- Fix B: GDPR - add DELETE /v1/auth/account endpoint
  Deletes analyses, then user (cascades to api_keys) in a single transaction
  Clears the auth cookie on success
- Fix C: OpenAI retry with exponential backoff
  Up to 3 retries on 429 and 5xx errors, with 1s/2s/4s delays
  Non-retryable errors (4xx auth/validation) fail immediately
- Fix D: optional Redis store for rate limiting
  Install rate-limit-redis + ioredis
  Uses Redis when REDIS_URL is set (shared counters across instances)
  Falls back to in-memory store when REDIS_URL is absent
  Add Redis service to docker-compose
  Document REDIS_URL in .env.example

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ NODE_ENV=development
 
 # Frontend URL (for CORS in production)
 FRONTEND_URL=http://localhost:3000
+
+# Redis URL — optionnel. Si défini, le rate limiting est partagé entre instances.
+# Sans cette variable, le rate limiting reste en mémoire (ok pour une instance unique).
+# REDIS_URL=redis://localhost:6379
