--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "express": "^5.2.1",
         "express-rate-limit": "^8.2.1",
         "helmet": "^8.1.0",
+        "ioredis": "^5.9.3",
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
         "openai": "^6.24.0",
         "pdf-parse": "^2.4.5",
         "pg": "^8.18.0",
+        "rate-limit-redis": "^4.3.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "uuid": "^13.0.0"
