--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
         "openai": "^6.24.0",
         "pdf-parse": "^2.4.5",
         "pg": "^8.18.0",
+        "pino": "^10.3.1",
         "rate-limit-redis": "^4.3.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
-        "nodemon": "^3.1.14"
+        "nodemon": "^3.1.14",
+        "pino-pretty": "^13.1.3"
     }
 }
