--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "ioredis": "^5.9.3",
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
+        "nodemailer": "^8.0.1",
         "openai": "^6.24.0",
         "pdf-parse": "^2.4.5",
         "pg": "^8.18.0",
